# internal/biz/dashboard_model.go
@@ -5,6 +5,15 @@ type DashboardSummary struct {
 	Storage        *UserStorageStats
 	RecentFiles    []*FileNode
 	ActivePlanName string
+	TotalFiles     int64
+	TotalFolders   int64
+	TotalShared    int64
+	Report         *DashboardReport
+}
+
+type DashboardReport struct {
+	NewFilesCount  int64
+	NewStorageUsed int64
 }
 
 type UserStorageStats struct {
